test/bad/classes/struct09.px

class A def
    Int x

A(y=0)
